HS-2848 fixed whitespace

--- a/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
+++ b/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
@@ -449,6 +449,7 @@
     .message
       p
         margin: 0
+        white-space: pre-line
 
         &.show-more
           height: rem(100px)
